src/test/deca/context/invalid/renduInitial/05unknownType.res
/user/1/.base/lennea/home/Projet_GL/src/test/deca/context/invalid/renduInitial/05unknownType.deca:3:1: Type indefini
